--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Python packaging artifacts
+*.egg-info/
+build/
+dist/
+
 # Distribution / packaging
 build/
 dist/
